# lockup-stake-metapool

./: .gitignore  Cargo.toml  README.md  build.sh
lockup-stake/: Cargo.toml
lockup-stake/src/: account.rs  internal.rs  lib.rs  owner.rs  ping.rs  staking.rs  test_only.rs  utils.rs  views.rs
lockup-stake/tests/: integration_test.rs  test_general.rs
lockup-stake/tests/helpers/: mod.rs
res/: staking_pool.wasm
scripts/: .vars.sh  0-view.sh  1-ping.sh  2-stake.sh  3-unstake.sh  4-unstake-all.sh  5-withdraw.sh  call-testnet.sh  deploy-mainnet.sh  deploy-testnet.sh
